--- a/AutoSenderEmail.csproj
+++ b/AutoSenderEmail.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="MySql.Data" Version="8.0.16" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
